--- a/index.html
+++ b/index.html
@@ -1,1 +1,189 @@
-<h1>Index</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="styles.css" rel="stylesheet">
+    <title>MuzakMaker- Smooth Jazz</title>
+</head>
+
+<body>
+    <header class="header">
+        <nav>
+            <input class="menu-btn" type="checkbox" id="menu-btn">
+            <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+            <ul class="menu">
+                <li><a href="#home">MuzakMaker</a></li>
+                <li><a href="#trending">Trending <br>Songs</a></li>
+                <li><a href="#playlists">Your <br>Playlists</a></li>
+                <li><a href="#curated">Curated <br>Playlists</a></li>
+                <li><a href="user"><img src="assets/images/duke-silver.png" alt="user profile picture"></a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h1>Smooth Jazz</h1>
+            <p>This station is dedicated to the soothing sounds of smooth jazz. This genre of commercially oriented
+                crossover jazz became dominant in the 1980s and early 1990s.</p>
+        </section>
+        <section id="trending">
+            <h2>Trending Songs</h2>
+            <div class="scroll-container">
+                <section>
+                    <div>
+                        <h3>Aloma</h3>
+                        <dl>
+                            <dt>Artist</dt>
+                            <dd>Cali</dd>
+                        </dl>
+                    </div>
+                    <img src="./assets/images/aloma-cover.png" alt="Aloma cover">
+                    <audio src="./assets/audio/aloma.mp3" controls></audio>
+                </section>
+                <section>
+                    <div>
+                        <h3>My Road</h3>
+                        <dl>
+                            <dt>Artist</dt>
+                            <dd>Nesterouk</dd>
+                        </dl>
+                    </div>
+                    <img src="./assets/images/my-road-cover.png" alt="My road cover">
+                    <audio src="./assets/audio/my-road.mp3" controls></audio>
+                </section>
+                <section>
+                    <div>
+                        <h3>Papaya</h3>
+                        <dl>
+                            <dt>Artist</dt>
+                            <dd>Dredstudio</dd>
+                        </dl>
+                    </div>
+                    <img src="./assets/images/papaya-cover.png" alt="Papaya cover">
+                    <audio src="./assets/audio/papaya.mp3" controls></audio>
+                </section>
+                <section>
+                    <div>
+                        <h3>Smoothies</h3>
+                        <dl>
+                            <dt>Artist</dt>
+                            <dd>Black Rhomb</dd>
+                        </dl>
+                    </div>
+                    <img src="./assets/images/smoothies-cover.png" alt="Smoothies cover">
+                    <audio src="./assets/audio/smoothies.mp3" controls></audio>
+                </section>
+                <section>
+                    <div>
+                        <h3>Successful Performance</h3>
+                        <dl>
+                            <dt>Artist</dt>
+                            <dd>Ricky Bombino</dd>
+                        </dl>
+                    </div>
+                    <img src="./assets/images/successful-performance-cover.png" alt="Successful performance cover">
+                    <audio src="./assets/audio/successful-performance.mp3" controls></audio>
+                </section>
+            </div>
+            <div>
+                <button type="button" class="more-btn">More trending</button>
+            </div>
+        </section>
+        <div class="dynamic-container">
+            <section id="playlists">
+                <h2>Your Playlists</h2>
+                <div class="scroll-container">
+                    <section>
+                        <img src="./assets/images/best-of-2020-cover.png" alt="Best of 2020 cover">
+                        <div>
+                            <h3>Best of 2020</h3>
+                            <p>The music that got you through the lock down.</p>
+                        </div>
+                    </section>
+                    <section>
+                        <img src="./assets/images/pumpkin-spice-cover.png" alt="Pumpkin spice cover">
+                        <div>
+                            <h3>Pumpkin Spice</h3>
+                            <p>Creamy and spicy, just like your favorite autumnal latte.</p>
+                        </div>
+                    </section>
+                    <section>
+                        <img src="./assets/images/quiet-storm-cover.png" alt="Quite storm cover">
+                        <div>
+                            <h3>Quiet Storm</h3>
+                            <p>Slow tempos and relaxed rhythms.</p>
+                        </div>
+                    </section>
+                    <section>
+                        <img src="./assets/images/smooth-jazz-cover.png" alt="Smooth saxophone cover">
+                        <div>
+                            <h3>Smooth Jazz</h3>
+                            <p>The pioneers of smooth jazz</p>
+                        </div>
+                    </section>
+                    <section>
+                        <img src="./assets/images/smooth-study-cover.png" alt="Smooth study cover">
+                        <div>
+                            <h3>Smooth Study</h3>
+                            <p>Background music to keep you going while you study. </p>
+                        </div>
+                    </section>
+                </div>
+                <div>
+                    <button type="button" class="more-btn">All your playlists</button>
+                </div>
+            </section>
+            <section id="curated">
+                <h2>Curated Playlists</h2>
+                <div class="scroll-container">
+                    <section>
+                        <img src="./assets/images/boozy-brunch-cover.png" alt="Boozy Brunch cover">
+                        <div>
+                            <h3>Boozy Brunch</h3>
+                            <p>Light up the afternoon with these energetic hits.</p>
+                        </div>
+                    </section>
+                    <section>
+                        <img src="./assets/images/dinner-party-cover.png" alt="Dinner part cover">
+                        <div>
+                            <h3>Dinner Party</h3>
+                            <p>Background music to give your party life, but allow your guests to chat. </p>
+                        </div>
+                    </section>
+                    <section>
+                        <img src="./assets/images/mellow-cover.png" alt="Mellow cover">
+                        <div>
+                            <h3>Mellow</h3>
+                            <p>Relax after a stressful day with this collection of extra smooth jazz.</p>
+                        </div>
+                    </section>
+                    <section>
+                        <img src="./assets/images/jazz-chill-cover.png" alt="Smooth study cover">
+                        <div>
+                            <h3>Jazz and Chill</h3>
+                            <p>Set the mood with these silky sounds.</p>
+                        </div>
+                    </section>
+                    <section>
+                        <img src="./assets/images/smooth-saxophone-cover.png" alt="Smooth saxophone cover">
+                        <div>
+                            <h3>Jazz Saxophone</h3>
+                            <p>The greatest collection of your sax favorites</p>
+                        </div>
+                    </section>
+                </div>
+                <div>
+                    <button type="button" class="more-btn">More curated</button>
+                </div>
+            </section>
+        </div>
+    </main>
+    <footer>
+        <p>Copyright 2022 Smooth Jazz</p>
+    </footer>
+</body>
+
+</html>
